wip: Working on race result upload
